feat(dashboard, inspections): ✨ enhance dashboard functionality with new filters for receipt and business name searches; improve styling and layout of violator list; add hover effects and pagination; update modal for violation details; streamline API calls for fetching filtered inspections

--- a/pages/admin/components/reports.html
+++ b/pages/admin/components/reports.html
@@ -47,10 +47,6 @@
    </div>
   </div>
   <section>
-   <!-- implement charts in here  -->
-   <!-- Pie Chart for [ Violation, Overdue, Resolved ] -->
-   <!-- Line Graph for Nunmber of violators  in a month [ progressive ]  -->
-   <!-- Bar graph for comparing violation and inspections with not violation -->
    <div>
     <canvas
      id="myChart"
@@ -61,35 +57,27 @@
    </div>
   </section>
   <script>
-   // Ensure this script runs after Chart.js is loaded
-   document.addEventListener("DOMContentLoaded", function () {
-    const ctx = document.getElementById("myChart").getContext("2d");
-
-    new Chart(ctx, {
-     type: "bar",
-     data: {
-      labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-      datasets: [
-       {
-        label: "# of Votes",
-        data: [12, 19, 3, 5, 2, 3],
-        borderWidth: 1,
-        backgroundColor: "rgba(75, 192, 192, 0.2)",
-        borderColor: "rgba(75, 192, 192, 1)",
-       },
-      ],
-     },
-     options: {
-      scales: {
-       y: {
-        beginAtZero: true,
-       },
+   const ctx = document.getElementById("myChart");
+   const chart = new Chart(ctx, {
+    type: "bar",
+    data: {
+     labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+     datasets: [
+      {
+       label: "# of Votes",
+       data: [12, 19, 3, 5, 2, 3],
+       borderWidth: 1,
+      },
+     ],
+    },
+    options: {
+     scales: {
+      y: {
+       beginAtZero: true,
       },
      },
-    });
+    },
    });
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
  </body>
 </html>
