--- a/pages/admin/components/sidebar.html
+++ b/pages/admin/components/sidebar.html
@@ -52,6 +52,14 @@
   ></div>
 
   <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  <script
+   src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.min.js"
+   integrity="sha512-L0Shl7nXXzIlBSUUPpxrokqq4ojqgZFQczTYlGjzONGTDAcLremjwaWv5A+EDLnxhQzY5xUZPWLOLqYRkY0Cbw=="
+   crossorigin="anonymous"
+   referrerpolicy="no-referrer"
+  ></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <script type="module">
    function loadContent(page, element, event) {
     if (event) {
